hphp/test/zend/good/tests/classes/class_abstract.php.expectf
base

Fatal error: Cannot instantiate abstract class base in %s/class_abstract.php on line 15
